--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -109,14 +109,14 @@ textarea {
 }
 
 #redisTab {
-    margin: 0px; 
+    margin: 0px;
 }
 
 .tab-content {
     padding: 10px 0 0 20px;
 }
 
-#srvList { 
+#srvList {
     margin-right: -31px;
     padding: 0 31px 100% 0;
     border-right: 1px solid #ddd;
@@ -145,4 +145,7 @@ textarea {
 
 .dropdown-menu li>a.warning-action {
     color: #c67605;
+}
+.navbar .brand {
+    font-size: 16px;
 }
