Add https, add secrets, login and install

--- a/templates/controller/installer/failed.twig
+++ b/templates/controller/installer/failed.twig
@@ -1,4 +1,4 @@
-{% extends "page/installer.twig" %}
+{% extends "page/center.twig" %}
 
 {% block title %}System info{% endblock %}
 {% block content %}
