--- a/templates/controller/installer/success.twig
+++ b/templates/controller/installer/success.twig
@@ -1,4 +1,4 @@
-{% extends "page/installer.twig" %}
+{% extends "page/center.twig" %}
 
 {% block title %}System info{% endblock %}
 {% block content %}
