Add misc controller

--- a/templates/main.twig
+++ b/templates/main.twig
@@ -11,14 +11,14 @@
                 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
                 <link rel="shortcut icon" href="assets/phpredmin/favicon.ico" />
                 <title>PHPRedmin - {% block title %}{% endblock %}</title>
-                <link href="assets/foundation/foundation.min.css" type="text/css" rel="stylesheet" />
+                <link href="/assets/foundation/foundation.min.css" type="text/css" rel="stylesheet" />
 
             {% endblock %}
         </head>
         <body>
             {% block page %}{% endblock %}
-			<script src="assets/jquery/jquery.min.js"></script>
-			<script src="assets/foundation/foundation.min.js"></script>
+			<script src="/assets/jquery/jquery.min.js"></script>
+			<script src="/assets/foundation/foundation.min.js"></script>
 			<script>
 			  $(document).foundation();
 			</script>
