--- a/templates/layout/center.twig
+++ b/templates/layout/center.twig
@@ -5,7 +5,7 @@
     <link href="/assets/phpredmin/css/installer-page.css" type="text/css" rel="stylesheet" />
 {% endblock %}
 
-{% block page %}
+{% block layout %}
     <div class="grid-container fluid">
         <div class="grid-x">
             <div class="large-4 medium-3 small-2 cell">
