--- a/templates/main.twig
+++ b/templates/main.twig
@@ -16,7 +16,7 @@
             {% endblock %}
         </head>
         <body>
-            {% block page %}{% endblock %}
+            {% block layout %}{% endblock %}
 			<script src="/assets/jquery/jquery.min.js"></script>
 			<script src="/assets/foundation/foundation.min.js"></script>
 			<script>
