--- a/templates/controller/misc/access-denied.twig
+++ b/templates/controller/misc/access-denied.twig
@@ -1,4 +1,4 @@
-{% extends "page/center.twig" %}
+{% extends "layout/center.twig" %}
 
 {% block title %}Acccess denied{% endblock %}
 {% block content %}
