--- a/templates/controller/misc/error.twig
+++ b/templates/controller/misc/error.twig
@@ -1,4 +1,4 @@
-{% extends "page/center.twig" %}
+{% extends "layout/center.twig" %}
 
 {% block title %}Server internal error{% endblock %}
 {% block content %}
