--- a/templates/controller/installer/form.twig
+++ b/templates/controller/installer/form.twig
@@ -29,7 +29,7 @@
     {% endif %}
     <div class="cell auto">
         <form method="post" action="install">
-            <div class="grid-x grid-padding-x">
+            <div class="grid-x">
                 <div class="small-12 medium-5 large-3 cell">
                     <label for="phpredmin-name" class="text-left middle error">{% trans %}Name{% endtrans %}:</label>
                 </div>
