--- a/templates/shared/input.twig
+++ b/templates/shared/input.twig
@@ -1,1 +1,10 @@
-<input {% if errors[name] is defined %}class="form_error"{% endif %} {% if type != 'password' and type != 'repassword' and fields[name] is defined %}value="{{ fields[name] }}"{% endif %} name="{{ name }}" type="{{ type }}" id="phpredmin-{{ name }}" placeholder="{% block placeholder %}{% endblock %}" {% if describedby is defined %}aria-describedby="{{ describedby }}"{% endif %}/>
+{% if icon is defined %}
+    <div class="input-group">
+        <span class="input-group-label">
+            <i class="fa {{ icon }} form_icon" aria-hidden="true"></i>
+        </span>
+        <input class="input-group-field{% if errors[name] is defined %} form_error{% endif %}" {% if type != 'password' and type != 'repassword' and fields[name] is defined %}value="{{ fields[name] }}"{% endif %} name="{{ name }}" type="{{ type }}" id="phpredmin-{{ name }}" placeholder="{% block placeholder %}{% endblock %}" {% if describedby is defined %}aria-describedby="{{ describedby }}"{% endif %}/>
+    </div>
+{% else %}
+<input {% if errors[name] is defined %}class="form_error"{% endif %}" {% if type != 'password' and type != 'repassword' and fields[name] is defined %}value="{{ fields[name] }}"{% endif %} name="{{ name }}" type="{{ type }}" id="phpredmin-{{ name }}" placeholder="{{ block('placeholder') }}" {% if describedby is defined %}aria-describedby="{{ describedby }}"{% endif %}/>
+{% endif %}
