--- a/templates/controller/installer/success.twig
+++ b/templates/controller/installer/success.twig
@@ -1,6 +1,6 @@
 {% extends "layout/center.twig" %}
 
-{% block title %}System info{% endblock %}
+{% block title %}{% trans %}System info{% endtrans %}{% endblock %}
 {% block content %}
 <div class="grid-y grid-padding-y">
     <div class="cell shrink small-cell-block-container">
