--- a/templates/main.twig
+++ b/templates/main.twig
@@ -12,6 +12,7 @@
                 <link rel="shortcut icon" href="assets/phpredmin/favicon.ico" />
                 <title>PHPRedmin - {% block title %}{% endblock %}</title>
                 <link href="/assets/foundation/foundation.min.css" type="text/css" rel="stylesheet" />
+                <link href="/assets/font-awesome/css/font-awesome.min.css" type="text/css" rel="stylesheet" />
 
             {% endblock %}
         </head>
