--- a/templates/controller/misc/main.twig
+++ b/templates/controller/misc/main.twig
@@ -13,7 +13,7 @@
     </ul>
     <div class="tabs-content" data-tabs-content="main-tab">
         <div class="tabs-panel is-active" id="keys">
-            {% include "controller/misc/containers/keys.twig" %}
+            {% include "shared/form/keys.twig" %}
         </div>
         <div class="tabs-panel" id="bulk_delete">
         </div>
