Add basic keys functionality

--- a/templates/controller/keys/keys.twig
+++ b/templates/controller/keys/keys.twig
@@ -8,7 +8,12 @@
         </div>
         {% if notFound %}
             <div class="cell small-12 callout alert">
-                {% trans %}No result found for "{{ search }}"{% endtrans %}
+                {% trans %}No results found for "{{ search }}"{% endtrans %}
+            <div>
+        {% endif %}
+        {% if unknown %}
+            <div class="cell small-12 callout alert">
+                {% trans %}Unknown key type returned by Redis for "{{ search }}"{% endtrans %}
             <div>
         {% endif %}
     </div>
