--- a/templates/controller/login/form.twig
+++ b/templates/controller/login/form.twig
@@ -46,7 +46,7 @@
                     {% endembed %}
                 </div>
                 <div class="small-12 medium-12 large-12 text-right">
-                    <button type="submit" class="button postfix"><i class="fa fa-sign-in"></i> {% trans %}Login{% endtrans %}</button>
+                    <button type="submit" class="button postfix"><i class="fas fa-sign-in-alt"></i> {% trans %}Login{% endtrans %}</button>
                 </div>
             </div>
         </form>
