--- a/templates/controller/misc/main.twig
+++ b/templates/controller/misc/main.twig
@@ -5,11 +5,11 @@
     <ul class="tabs" data-deep-link="true" data-update-history="true" data-tabs id="main-tab" style>
         <li class="tabs-title is-active"><a href="#keys" aria-selected="true"><i class="fa fa-key"></i> {% trans "Keys" %}</a></li>
         <li class="tabs-title"><a href="#bulk_delete" aria-selected="true"><i class="fa fa-trash"></i> {% trans "Bulk delete" %}</a></li>
-        <li class="tabs-title"><a href="#strings" aria-selected="true"><i class="fa fa-file-text"></i> {% trans "Strings" %}</a></li>
+        <li class="tabs-title"><a href="#strings" aria-selected="true"><i class="fa fa-font"></i> {% trans "Strings" %}</a></li>
         <li class="tabs-title"><a href="#hashes" aria-selected="true"><i class="fa fa-hashtag"></i> {% trans "Hashes" %}</a></li>
         <li class="tabs-title"><a href="#lists" aria-selected="true"><i class="fa fa-list"></i> {% trans "Lists" %}</a></li>
         <li class="tabs-title"><a href="#sets" aria-selected="true"><i class="fa fa-object-group"></i> {% trans "Sets" %}</a></li>
-        <li class="tabs-title"><a href="#sorted_sets" aria-selected="true"><i class="fa fa-sort-amount-asc"></i> {% trans "Sorted sets" %}</a></li>
+        <li class="tabs-title"><a href="#sorted_sets" aria-selected="true"><i class="fas fa-sort-numeric-down"></i> {% trans "Sorted sets" %}</a></li>
     </ul>
     <div class="tabs-content" data-tabs-content="main-tab">
         <div class="tabs-panel is-active" id="keys">
