--- a/templates/shared/form/keys.twig
+++ b/templates/shared/form/keys.twig
@@ -1,4 +1,4 @@
-<h6 class="subheader"><i class="fa fa-search"></i> {% trans "Search keys" %}</h6>
+<h6 class="subheader"><i class="fas fa-search"></i> {% trans "Search keys" %}</h6>
 <hr/>
 <form method="post" action="{% include 'shared/url.twig' with {'href' : 'keys'} %}">
     <div class="grid-x grid-margin-x">
